rename button class

--- a/source/ui.html
+++ b/source/ui.html
@@ -532,25 +532,25 @@ add(a, b);</code></pre>
 
           <h3>Buttons</h3>
 
-          <button class="btn">Button</button>
+          <button class="button">Button</button>
 
-          <button class="btn btn--rounded">Button</button>
-          <button class="btn btn--pill">Button</button>
+          <button class="button button--rounded">Button</button>
+          <button class="button button--pill">Button</button>
 
-          <button class="btn btn--primary">Button</button>
-          <button class="btn btn--secondary">Button</button>
-          <button class="btn btn--success">Button</button>
-          <button class="btn btn--warning">Button</button>
-          <button class="btn btn--error">Button</button>
+          <button class="button button--primary">Button</button>
+          <button class="button button--secondary">Button</button>
+          <button class="button button--success">Button</button>
+          <button class="button button--warning">Button</button>
+          <button class="button button--error">Button</button>
 
-          <pre><code>&lt;button class="btn&gt;Button&lt;/button&gt;
-&lt;button class="btn btn--rounded&gt;Button Rounded&lt;/button&gt;
-&lt;button class="btn btn--pill&gt;Button Pill&lt;/button&gt;
-&lt;button class="btn btn--primary&gt;Button Primary&lt;/button&gt;
-&lt;button class="btn btn--secondary&gt;Button Secondary&lt;/button&gt;
-&lt;button class="btn btn--success&gt;Button Success&lt;/button&gt;
-&lt;button class="btn btn--warning&gt;Button Warning&lt;/button&gt;
-&lt;button class="btn btn--error&gt;Button Error&lt;/button&gt;</code></pre>
+          <pre><code>&lt;button class="button&gt;Button&lt;/button&gt;
+&lt;button class="button button--rounded&gt;Button Rounded&lt;/button&gt;
+&lt;button class="button button--pill&gt;Button Pill&lt;/button&gt;
+&lt;button class="button button--primary&gt;Button Primary&lt;/button&gt;
+&lt;button class="button button--secondary&gt;Button Secondary&lt;/button&gt;
+&lt;button class="button button--success&gt;Button Success&lt;/button&gt;
+&lt;button class="button button--warning&gt;Button Warning&lt;/button&gt;
+&lt;button class="button button--error&gt;Button Error&lt;/button&gt;</code></pre>
 
         </section>
 
