fix inline quote

--- a/source/ui.html
+++ b/source/ui.html
@@ -128,7 +128,7 @@
             <cite>Source</cite>
           </blockquote>
 
-          <q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q>
+          <p><q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q></p>
 
           <h3>Code</h3>
 
