--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
 
 <head>
 
@@ -9,7 +9,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <!-- Search Engine -->
-
+  <meta content="/favicon-128x128.png" itemprop="image">
   <meta name="description" content="Description goes here">
 
   <!-- Mobile & Windows 8 -->
