remove PostalAddress itemprop

--- a/source/ui.html
+++ b/source/ui.html
@@ -103,7 +103,7 @@
 
           <h3>Address</h3>
 
-          <address itemtype="http://schema.org/PostalAddress" itemscope itemprop="address">
+          <address itemtype="http://schema.org/PostalAddress" itemscope>
             <p>
               <strong itemprop="name">Company Name</strong><br>
               <span itemprop="streetAddress">Address</span><br>
@@ -112,7 +112,7 @@
             </p>
           </address>
 
-          <pre><code>&lt;address itemtype="http://schema.org/PostalAddress" itemscope itemprop="address"&gt;
+          <pre><code>&lt;address itemtype="http://schema.org/PostalAddress" itemscope&gt;
   &lt;p&gt;
     &lt;strong itemprop="name"&gt;Company Name&lt;/strong&gt;&lt;br&gt;
     &lt;span itemprop="streetAddress"&gt;Address&lt;/span&gt;&lt;br&gt;
