add site schema tags

--- a/source/ui.html
+++ b/source/ui.html
@@ -42,7 +42,7 @@
 
 <body>
 
-  <header class="site__header" role="banner">
+  <header class="site__header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
   
     <div class="grid__container">
   
@@ -54,7 +54,7 @@
 
   <div class="site__container">
 
-    <main class="site__main" role="main">
+    <main class="site__main" role="main" itemscope itemprop="mainContentOfPage">
 
       
 
@@ -1196,7 +1196,7 @@ add(a, b);</code></pre>
 
   </div>
 
-  <footer class="site__footer" role="contentinfo">
+  <footer class="site__footer" role="contentinfo" itemscope itemtype="http://schema.org/WPFooter">
   
     <div class="grid__container">
   
