add schema tags to gallery

--- a/source/ui.html
+++ b/source/ui.html
@@ -414,91 +414,111 @@ add(a, b);</code></pre>
 
           <h3>Gallery</h3>
 
-          <div class="gallery gallery-per-row-4">
+          <div class="gallery gallery-per-row-4" itemscope itemtype="http://schema.org/ImageGallery">
 
             <ul class="images">
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                  </a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail"></a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
-                <figure>
-                  <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
-                  <figcaption>Figcaption</figcaption>
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail"></a>
+                  <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
@@ -506,12 +526,15 @@ add(a, b);</code></pre>
 
           </div>
 
-          <pre><code>&lt;div class="gallery"&gt;
+          <pre><code>&lt;div class="gallery" itemscope itemtype="http://schema.org/ImageGallery"&gt;
   &lt;ul class="images"&gt;
 
     &lt;li&gt;
-      &lt;figure&gt;
-        &lt;a href="#" title=""&gt;&lt;img src="" width="" height="" alt=""&gt;&lt;/a&gt;
+      &lt;figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"&gt;
+        &lt;a href="#" title=" itemprop="contentUrl"&gt;
+          &lt;img src=" width="" height="" alt=" itemprop="thumbnail"&gt;
+        &lt;/a&gt;
+        &lt;figcaption itemprop="caption description"&gt;…&lt;/figcaption&gt;
       &lt;/figure&gt;
     &lt;/li&gt;
 
