--- a/source/ui.html
+++ b/source/ui.html
@@ -895,7 +895,7 @@ add(a, b);</code></pre>
 
           <h3>Search</h3>
 
-          <form action="#" class="form form-login" itemscope itemtype="http://schema.org/SearchAction">
+          <form action="#" class="form" itemscope itemtype="http://schema.org/SearchAction">
             <meta itemprop="target" content="http://www.example.com/search?q={query}">
             <fieldset>
 
@@ -911,7 +911,7 @@ add(a, b);</code></pre>
             </fieldset>
           </form>
 
-        <pre><code>&lt;form action="#" method="get" class="form form-login" itemscope itemtype="http://schema.org/SearchAction"&gt;
+        <pre><code>&lt;form action="#" method="get" class="form" itemscope itemtype="http://schema.org/SearchAction"&gt;
   &lt;meta itemprop="target" content="http://www.example.com/search?q={query}"&gt;
   &lt;fieldset&gt;
 
