--- a/source/ui.html
+++ b/source/ui.html
@@ -44,7 +44,7 @@
 
   <header class="site__header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
   
-    <div class="grid__container">
+    <div class="grid">
   
       <h1>Website</h1>
   
@@ -58,7 +58,7 @@
 
       
 
-<div class="grid__container">
+<div class="grid">
 
   <div class="grid__row">
 
@@ -1462,7 +1462,7 @@ add(a, b);</code></pre>
 
   <footer class="site__footer" role="contentinfo" itemscope itemtype="http://schema.org/WPFooter">
   
-    <div class="grid__container">
+    <div class="grid">
   
       FOOTER
   
