move assets into "assets" folder

--- a/source/404.html
+++ b/source/404.html
@@ -24,7 +24,7 @@
 
   <!-- Stylesheets -->
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Icons -->
 
@@ -85,8 +85,8 @@
     ga('create', '', 'auto');
     ga('send', 'pageview');
   </script>
-  <!-- build:js js/script.js -->
-  <script src="js/script.js"></script>
+  <!-- build:js assets/js/script.js -->
+  <script src="assets/js/script.js"></script>
   <!-- endbuild -->
 
 </body>
