--- a/source/ui.html
+++ b/source/ui.html
@@ -24,7 +24,7 @@
 
   <!-- Stylesheets -->
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Icons -->
 
@@ -1476,8 +1476,8 @@ add(a, b);</code></pre>
     ga('create', '', 'auto');
     ga('send', 'pageview');
   </script>
-  <!-- build:js js/script.js -->
-  <script src="js/script.js"></script>
+  <!-- build:js assets/js/script.js -->
+  <script src="assets/js/script.js"></script>
   <!-- endbuild -->
 
 </body>
